--- a/recipes/index.html
+++ b/recipes/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-   <ul> <li><a href="recipes/lasagna.html"> Lasagna Recipe </a> </li>
-        <li><a href="recipes/hamburger.html"> Hamburger Recipe </a> </li>
-        <li><a href="recipes/pizza.html"> Pizza Recipe </a> </li>
+   <ul> <li><a href="lasagna.html"> Lasagna Recipe </a> </li>
+        <li><a href="hamburger.html"> Hamburger Recipe </a> </li>
+        <li><a href="pizza.html"> Pizza Recipe </a> </li>
 </ul>
 </body>
 </html>
